--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -2,8 +2,19 @@ spring:
   rabbitmq:
     listener:
       retry:
-        enabled: true
+        enabled: false
         initial-interval: 2000
         max-attempts: 2
         multiplier: 1.5
         max-interval: 5000
+      #default-requeue-rejected: false
+
+
+initial-interval: 2000
+max-attempts: 2
+multiplier: 1.5
+max-interval: 5000
+
+logging:
+  level:
+    org.springframework: WARN
